<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/constraintLayoutActivityAuthorization"
    tools:context=".AuthorizationActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewApplicationIcon"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/application_icon_content_description"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/pad_icon"/>

        <TextView
            android:id="@+id/textViewAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/text_view_authorization"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.Design.TextInputLayout">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:backgroundTint="@color/black"
                android:hint="@string/edit_text_email_hint"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Widget.Design.TextInputLayout">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:autofillHints="no"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:hint="@string/edit_text_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                tools:ignore="SpeakableTextPresentCheck"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonAuthorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"
            android:backgroundTint="@color/my_pink"
            android:gravity="center_horizontal"
            android:paddingVertical="20dp"
            android:paddingHorizontal="80dp"
            android:text="@string/button_authorization"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/textViewToRegLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/text_view_to_reg_label"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonRegistration"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:paddingHorizontal="5dp"
                android:text="@string/button_registration"
                android:textAllCaps="false"
                android:textColor="@color/my_pink"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="0dp"
            android:orientation="horizontal"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/textViewToForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/text_view_to_forgot_password_label"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonRestorePassword"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:paddingHorizontal="5dp"
                android:text="@string/button_restore_password"
                android:textAllCaps="false"
                android:textColor="@color/my_pink"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="VisualLintBounds"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
