...
    <string name="text_view_monday">Пн</string>
    <string name="text_view_friday">Пт</string>
    <string name="menu_navigation_calendar">Календарь</string>
    <string name="menu_navigation_notes">Заметки</string>
    <string name="menu_navigation_profile">Профиль</string>
    <string name="button_show_legend">Показать легенду</string>
    <string name="floating_action_button_add_psychologist">Floating action button for adding psychologist</string>
    <string name="button_delete_psychologist">Удалить психолога</string>
    <string name="button_delete_sportsman">Удалить спортсмена</string>
    <string name="text_view_notes">Заметки</string>
    <string name="text_view_assignment_tests">Назначение теста</string>
    <string name="edit_text_psychologist_email_hint">Email вашего психолога</string>
    <string name="edit_text_situation">Введите текст...</string>
...
